# client-server-chat-app

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: app.h  contacts.h  left_panel.h  main_frame.h  protocol.h  right_panel.h  search.h  send_message.h  server_utils.h  text_display.h  user_header.h
lib/: contacts.cpp  left_panel.cpp  main_frame.cpp  protocol.cpp  right_panel.cpp  search.cpp  send_message.cpp  server_utils.cpp  text_display.cpp  user_header.cpp
resources/: edit.xpm  info.xpm  user.xpm  video.xpm
src/: app.cpp  main.cpp  server.cpp
